2005-06-24  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: added a mnemonic.

	* libgimpwidgets/gimppropwidgets.c
	(gimp_prop_file_chooser_button_new): embed the button in an
	event-box if the param_spec provides a blurb to be used as a
	tooltip.

	* libgimpconfig/gimpcolorconfig.c: improved blurbs.

2005-06-24  Manish Singh  <yosh@gimp.org>

	* libgimpcolor/gimpcolor.def: add gimp_rgba_parse_css

2005-06-24  Sven Neumann  <sven@gimp.org>

	* app/actions/image-actions.c
	* app/actions/layers-actions.c
	* app/dialogs/image-properties-dialog.c: use GTK_STOCK_PROPERTIES
	as stock icon for property menu items and dialogs.

2005-06-24  Sven Neumann  <sven@gimp.org>

	* app/core/gimppdbprogress.[ch]: removed an incomplete and unused
	function.

2005-06-24  Sven Neumann  <sven@gimp.org>

	* app/pdb/procedural_db.c (procedural_db_execute): if we end up
	without any return values, assume an execution error instead of
	crashing (bug #308904).

2005-06-24  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
	increased maximum property size, added debug output.

2005-06-24  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: implement the configure method and tell
	the user where this module can be configured.

2005-06-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/png.c: some code cleanup, no real changes. 

2005-06-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/png.c (save_image): 
	* app/dialogs/preferences-dialog.c: added a check button to control
	the "display-profile-from-gdk" option.

	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
	fixed use of gdk_property_get(). Return NULL if no display profile
	can be obtained.

2005-06-24  Sven Neumann  <sven@gimp.org>

	Added basic support for the proposed ICC Profiles In X Specification
	(http://burtonini.com/temp/xicc-specification-0.1.html).
	
	* libgimpconfig/gimpcolorconfig.[ch]: added a configuration option